@@ -87,3 +87,4 @@ Build 7
 - Added base for enchanter
 - Fancy enchanter Particles 
 - Now loot finder gives loot from dungeon corridor chests instead of a custom list
+- Implemented Enchanter
